# advent-of-code-2021

./: Makefile  README.md  app.py  pyproject.toml  run.py
advent_of_code_2021/: depth_calculator.py  position.py  submarine.py
advent_of_code_2021/day01/: error.py  run.py  sonar.py
advent_of_code_2021/day02/: command.py  position.py  run.py  submarine.py
advent_of_code_2021/day03/: diagnostics_report.py  diagnostics_service.py  error.py  run.py
advent_of_code_2021/day04/: board.py  board_response.py  game.py
docs/puzzles/: day02.md  day03.md  day04.md
tests/acceptance/: conftest.py  test_depth_calculator_should.py  test_submarine_movement.py
tests/acceptance/day02/: test_submarine_movement.py
tests/acceptance/day03/: test_diagnostics_service.py
tests/unit/: test_depth_calculator.py  test_move_submarine.py  test_position.py  test_sliding_window_converter.py
tests/unit/day03/: test_diagnostics_service.py
tests/unit/day04/: conftest.py  test_board_should.py  test_game_should.py
