[tool.poetry]
name = "advent of code 2021"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Danish Javed, Istvan Agardi <username@example.org>"]
license = ""

[tool.poetry.dependencies]
python = "^3.10.5"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.1.0"
flake8 = "^3.8.4"
mypy = "^0.960"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
puzzle = "./run:run_puzzle"
